feat: CRUD STUDENT MODULES

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container card p-5">
-        <h1>Ruang Ghibah PPLG II!</h1>
+        <h1>Ruang Gosip PPLG II!</h1>
 
         <input id="name" placeholder="your name" type="text" class="form-control" required />
 
